--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
                     <div class="profile-text">
                         <h4>Las Vegas Tattooer</h4>
-                        <p>Specializing in American traditional, but also well rounded check out my &rarr; <a href="">walk in page</a> &larr;</p>
+                        <p>Specializing in American traditional, but also well rounded check out my <br> &rarr; <a class="walk-in-text" href="">walk in page</a> &larr;</p>
                         <p>Local artist, Vegas raised. Tattooing since 2016, </p>
                         <a class="center link btn" href="">&rarr; See portfolio &larr;</a>
                     </div>
